--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -13,16 +13,18 @@
         android:orientation="horizontal"
         android:background="@drawable/maintopbg">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Date Time"
-            android:id="@+id/test"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Time"
-            android:id="@+id/test2"/>
+            android:text="Add Task"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:layout_marginTop="50dp"
+            android:id="@+id/topText"/>
     </LinearLayout>
+
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +33,7 @@
         app:cardElevation="8dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="510dp"
             android:paddingTop="15dp"
             android:padding="10dp"
             android:orientation="vertical">
@@ -45,15 +47,18 @@
                     android:layout_height="wrap_content"
                     android:text="Title"
                     android:textAlignment="center"
-                    android:textSize="30dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_height="50dp"
                     android:hint="Add title"
+                    android:maxLength="8"
                     android:id="@+id/addTitle"
                     android:textAlignment="center"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:background="@drawable/edittext"/>
             </LinearLayout>
             <LinearLayout
@@ -66,25 +71,28 @@
                     android:layout_height="wrap_content"
                     android:text="Description"
                     android:textAlignment="center"
-                    android:textSize="30dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:hint="Add Description"
-                    android:inputType="number"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:inputType="text"
+                    android:maxLength="25"
                     android:id="@+id/addDes"
                     android:textAlignment="center"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:background="@drawable/edittext"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_marginTop="15dp">
                 <LinearLayout
-                    android:layout_width="180dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="15dp"
                     android:paddingLeft="20dp"
@@ -97,15 +105,31 @@
                         android:textSize="15sp"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:src="@drawable/ic_baseline_calendar_today_24"
                         android:id="@+id/calendarId"
                         app:elevation="5dp"
                         android:background="@drawable/datetiembg"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date:"
+                        android:layout_marginLeft="15dp"
+                        android:layout_gravity="center"
+                        android:textSize="20sp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="date"
+                        android:textSize="20sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/test"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="180dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="15dp"
@@ -118,12 +142,28 @@
                         android:layout_gravity="center"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:src="@drawable/ic_baseline_access_time_24"
                         android:id="@+id/timeId"
                         app:elevation="5dp"
                         android:background="@drawable/datetiembg"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Time:"
+                        android:layout_marginLeft="15dp"
+                        android:layout_gravity="center"
+                        android:textSize="20sp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="time"
+                        android:textSize="20sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/test2"/>
 
                 </LinearLayout>
 
@@ -131,12 +171,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:paddingRight="10dp"
                 android:paddingLeft="5dp"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="180dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -151,10 +191,10 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="180dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="8dp"
                     android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
