--- a/app/src/main/res/layout/taskitem.xml
+++ b/app/src/main/res/layout/taskitem.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="20dp"
         app:cardElevation="8dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,19 +16,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="190dp"
                         android:layout_height="wrap_content"
                         android:text="Title"
+                        android:textColor="@color/violetBlue"
                         android:textSize="35sp"
                         android:id="@+id/itemTitle"/>
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="240dp"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         android:text="Add your description here"
@@ -39,13 +41,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="-45dp"
                     android:text="Time:"
+                    android:textColor="@color/violetBlue"
                     android:layout_gravity="center"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
                     android:layout_marginLeft="5dp"
                     android:textSize="18sp"
                     android:layout_gravity="center"
@@ -56,8 +61,13 @@
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
+                   android:layout_marginLeft="90dp"
+                   android:layout_marginRight="90dp"
+                   android:layout_marginBottom="10dp"
                    android:text="Thursday 4/8/2020"
                    android:id="@+id/itemDate"
+                   android:textColor="#fff"
+                   android:background="@drawable/datebg"
                    android:textSize="23sp"
                    android:textAlignment="center"/>
 
