--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -10,8 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@drawable/maintopbg">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/back"
+            android:background="@drawable/ic_back_24"
+            android:layout_margin="10dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,7 +27,6 @@
             android:textStyle="bold"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:layout_marginTop="50dp"
             android:id="@+id/topText"/>
     </LinearLayout>
 
