--- a/app/src/main/res/layout-sw600dp/taskitem.xml
+++ b/app/src/main/res/layout-sw600dp/taskitem.xml
@@ -53,6 +53,7 @@
                     android:layout_height="wrap_content"
                     android:text="Time:"
                     android:textColor="@color/violetBlue"
+                    android:layout_gravity="center"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
                 <TextView
@@ -61,6 +62,7 @@
                     android:layout_marginTop="1dp"
                     android:layout_marginLeft="5dp"
                     android:textSize="16sp"
+                    android:layout_gravity="center"
                     android:text="11.00 PM"
                     android:id="@+id/itemTime"/>
                 </LinearLayout>
