--- a/app/src/main/res/layout-land/activity_add_edit.xml
+++ b/app/src/main/res/layout-land/activity_add_edit.xml
@@ -8,7 +8,7 @@
     tools:context=".AddEdit">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:background="@drawable/maintopbg">
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Add Task"
             android:textColor="#fff"
+            android:layout_marginTop="-50dp"
             android:textStyle="bold"
             android:textSize="30sp"
             android:textAlignment="center"
@@ -53,13 +54,13 @@
                     android:layout_height="wrap_content"
                     android:text="Title"
                     android:textAlignment="center"
-                    android:textSize="25dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_height="50dp"
+                    android:layout_height="35dp"
                     android:hint="Add title"
                     android:maxLength="8"
                     android:id="@+id/addTitle"
@@ -77,11 +78,11 @@
                     android:layout_height="wrap_content"
                     android:text="Description"
                     android:textAlignment="center"
-                    android:textSize="25dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="35dp"
                     android:hint="Add Description"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -95,13 +96,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="15dp">
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="15dp"
                     android:paddingLeft="20dp"
+                    android:layout_marginLeft="15dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -111,8 +113,8 @@
                         android:textSize="15sp"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:src="@drawable/ic_baseline_calendar_today_24"
                         android:id="@+id/calendarId"
                         app:elevation="5dp"
@@ -135,11 +137,11 @@
                         android:id="@+id/test"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="15dp"
-                    android:paddingLeft="18dp">
+                    android:paddingLeft="110dp">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -148,8 +150,8 @@
                         android:layout_gravity="center"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:src="@drawable/ic_baseline_access_time_24"
                         android:id="@+id/timeId"
                         app:elevation="5dp"
@@ -183,11 +185,12 @@
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="305dp"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp">
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -198,13 +201,12 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="305dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
                     android:layout_weight="1"
+                    android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    android:layout_marginLeft="10dp"
-                    >
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -213,6 +215,8 @@
                         android:textSize="18sp"
                         android:textColor="#fff"
                         android:background="@drawable/addbutton"/>
+
+
                 </LinearLayout>
 
             </LinearLayout>
