--- a/app/src/main/res/layout-large/activity_add_edit.xml
+++ b/app/src/main/res/layout-large/activity_add_edit.xml
@@ -178,16 +178,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:weightSum="2"
+                android:paddingRight="10dp"
+                android:paddingLeft="5dp"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="182dp"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dp">
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -198,13 +197,11 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="182dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
-                    android:layout_weight="1"
-                    android:paddingRight="5dp"
-                    android:layout_marginLeft="10dp"
-                    >
+                    android:paddingLeft="15dp"
+                    android:paddingRight="8dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -213,6 +210,8 @@
                         android:textSize="18sp"
                         android:textColor="#fff"
                         android:background="@drawable/addbutton"/>
+
+
                 </LinearLayout>
 
             </LinearLayout>
