--- a/app/src/main/res/layout-normal/activity_add_edit.xml
+++ b/app/src/main/res/layout-normal/activity_add_edit.xml
@@ -178,16 +178,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="165dp"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp">
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -198,13 +199,12 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="165dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="5dp"
-                    android:layout_weight="1"
                     android:paddingRight="5dp"
-                    android:layout_marginLeft="10dp"
-                    >
+                    android:layout_weight="1"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -213,6 +213,8 @@
                         android:textSize="18sp"
                         android:textColor="#fff"
                         android:background="@drawable/addbutton"/>
+
+
                 </LinearLayout>
 
             </LinearLayout>
