--- a/app/src/main/res/layout-sw600dp/activity_add_edit.xml
+++ b/app/src/main/res/layout-sw600dp/activity_add_edit.xml
@@ -8,7 +8,7 @@
     tools:context=".AddEdit">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:background="@drawable/maintopbg">
@@ -25,7 +25,7 @@
             android:text="Add Task"
             android:textColor="#fff"
             android:textStyle="bold"
-            android:textSize="30sp"
+            android:textSize="50sp"
             android:textAlignment="center"
             android:id="@+id/topText"/>
     </LinearLayout>
@@ -39,7 +39,7 @@
         app:cardElevation="8dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="510dp"
+            android:layout_height="600dp"
             android:paddingTop="15dp"
             android:padding="10dp"
             android:orientation="vertical">
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:text="Title"
                     android:textAlignment="center"
-                    android:textSize="25dp"
+                    android:textSize="35dp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="Description"
                     android:textAlignment="center"
-                    android:textSize="25dp"
+                    android:textSize="35sp"
                     android:textStyle="bold"/>
                 <EditText
                     android:layout_width="match_parent"
@@ -96,7 +96,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -108,11 +109,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Set Date"
-                        android:textSize="15sp"/>
+                        android:textSize="25sp"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:src="@drawable/ic_baseline_calendar_today_24"
                         android:id="@+id/calendarId"
                         app:elevation="5dp"
@@ -123,13 +124,13 @@
                         android:text="Date:"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:textStyle="bold"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="date"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
                         android:id="@+id/test"/>
@@ -144,12 +145,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Set Time"
-                        android:textSize="15sp"
+                        android:textSize="25sp"
                         android:layout_gravity="center"/>
                     <ImageButton
                         android:layout_marginLeft="5dp"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:src="@drawable/ic_baseline_access_time_24"
                         android:id="@+id/timeId"
                         app:elevation="5dp"
@@ -160,13 +161,13 @@
                         android:text="Time:"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:textStyle="bold"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="time"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
                         android:id="@+id/test2"/>
@@ -178,16 +179,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp">
+                    android:paddingRight="5dp"
+                    android:paddingLeft="5dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -198,13 +200,12 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
                     android:layout_weight="1"
                     android:paddingRight="5dp"
-                    android:layout_marginLeft="10dp"
-                    >
+                    android:paddingLeft="5dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -213,6 +214,8 @@
                         android:textSize="18sp"
                         android:textColor="#fff"
                         android:background="@drawable/addbutton"/>
+
+
                 </LinearLayout>
 
             </LinearLayout>
