--- a/app/src/main/res/layout-xlarge/activity_add_edit.xml
+++ b/app/src/main/res/layout-xlarge/activity_add_edit.xml
@@ -8,7 +8,7 @@
     tools:context=".AddEdit">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:background="@drawable/maintopbg">
@@ -26,6 +26,7 @@
             android:textColor="#fff"
             android:textStyle="bold"
             android:textSize="30sp"
+            android:layout_marginTop="-40dp"
             android:textAlignment="center"
             android:id="@+id/topText"/>
     </LinearLayout>
@@ -95,10 +96,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="15dp">
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="15dp"
                     android:paddingLeft="20dp"
@@ -135,10 +136,11 @@
                         android:id="@+id/test"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="15dp"
+                    android:layout_marginLeft="150dp"
                     android:paddingLeft="18dp">
                     <TextView
                         android:layout_width="wrap_content"
@@ -178,16 +180,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+                android:paddingRight="10dp"
                 android:weightSum="2"
+                android:paddingLeft="5dp"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="182dp"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:layout_weight="1"
-                    android:paddingLeft="5dp">
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -198,13 +201,12 @@
                         android:background="@drawable/addbutton"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="182dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
+                    android:paddingLeft="15dp"
                     android:layout_weight="1"
-                    android:paddingRight="5dp"
-                    android:layout_marginLeft="10dp"
-                    >
+                    android:paddingRight="8dp"
+                    android:gravity="center">
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
@@ -213,6 +215,8 @@
                         android:textSize="18sp"
                         android:textColor="#fff"
                         android:background="@drawable/addbutton"/>
+
+
                 </LinearLayout>
 
             </LinearLayout>
