Responsive Ui in development

--- a/app/src/main/res/layout-normal/activity_add_edit.xml
+++ b/app/src/main/res/layout-normal/activity_add_edit.xml
@@ -41,12 +41,14 @@
             android:layout_width="match_parent"
             android:layout_height="510dp"
             android:paddingTop="15dp"
+            android:weightSum="5"
             android:padding="10dp"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
@@ -71,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_weight="1"
                 android:paddingTop="10dp">
                 <TextView
                     android:layout_width="match_parent"
@@ -96,6 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_weight="1"
                 android:layout_marginTop="15dp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -139,6 +143,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="15dp"
+                    android:layout_weight="1"
                     android:paddingLeft="18dp">
                     <TextView
                         android:layout_width="wrap_content"
@@ -180,6 +185,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <LinearLayout
