--- a/app/src/main/res/layout-land/activity_add_edit.xml
+++ b/app/src/main/res/layout-land/activity_add_edit.xml
@@ -96,6 +96,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:weightSum="2"
                 android:orientation="horizontal"
                 android:layout_marginTop="15dp">
                 <LinearLayout
@@ -104,6 +105,7 @@
                     android:paddingTop="15dp"
                     android:paddingLeft="20dp"
                     android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -138,6 +140,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="15dp"
