--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -8,7 +8,7 @@
     tools:context=".AddEdit">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:background="@drawable/maintopbg">
@@ -22,6 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-20dp"
             android:text="Add Task"
             android:textColor="#fff"
             android:textStyle="bold"
@@ -86,7 +87,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:inputType="text"
-                    android:maxLength="25"
+                    android:maxLength="22"
                     android:id="@+id/addDes"
                     android:textAlignment="center"
                     android:textSize="20sp"
